8223186: HotSpot compile warnings from GCC 9

Reviewed-by: dholmes, aeubanks